# predictables-graph

./: Cargo.toml
.github/workflows/: rust.yml
.trunk/: trunk.yaml
demo/: index.html
src/: lib.rs  main.rs
src/graph/: edge.rs  edge_list.rs  force_simulation.rs  graph.rs  mod.rs  node.rs  node_list.rs
src/graph/zone/: adjacency.rs  major_zone.rs  minor_zone.rs  mod.rs  zone.rs
src/interaction/: mod.rs
src/math/: vector_2d.rs
src/node/: mod.rs
src/simulation/: force_simulation.rs  mod.rs
src/utils/: helpers.rs
src/vector/: mod.rs
src/visualization/: mod.rs
