[package]
name = "predictables-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.5"
derive_builder = "0.12.0"

[lib]
crate-type = ["cdylib"]
